<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#76FF03"
    tools:context="com.example.android.americanfootball.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TextView"
                    android:text="@string/team_a" />

                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/TextView2"
                    android:text="@string/zero" />

            </LinearLayout>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="104dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/helmet5" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TextView"
                    android:text="@string/team_b" />

                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/TextView2"
                    android:text="@string/zero" />

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/americanfield1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <Button
                    style="@style/Button"
                    android:text="@string/touch"
                    android:id="@+id/touch_a" />

                <Button
                    style="@style/Button"
                    android:text="@string/extra"
                    android:id="@+id/extra_a"/>

                <Button
                    style="@style/Button"
                    android:text="@string/Conversion"
                    android:id="@+id/conversion_a"/>

                <Button
                    style="@style/Button"
                    android:text="@string/Field"
                    android:id="@+id/field_a"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <Button
                    style="@style/Button"
                    android:text="@string/touch"
                    android:id="@+id/touch_b"/>

                <Button
                    style="@style/Button"
                    android:text="@string/extra"
                    android:id="@+id/extra_B"/>

                <Button
                    style="@style/Button"
                    android:text="@string/Conversion"
                    android:id="@+id/conversion_b"/>

                <Button
                    style="@style/Button"
                    android:text="@string/Field"
                    android:id="@+id/field_B"/>

            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="360dp">

            <ImageView
                android:layout_width="400dp"
                android:layout_height="140dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/americanfootball5" />

            <Button
                style="@style/Button2"
                android:onClick="resetScore"
                android:text="@string/reset"
                android:id="@+id/button" />

        </RelativeLayout>

    </RelativeLayout>


</ScrollView>
